fix: height wrap

--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,7 @@ a:hover {
 
 /*! Стили колонок */
 .column-layout {
-    padding: 125px 0 80px 0;
+    padding: 60px 0 60px 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -241,7 +241,7 @@ a:hover {
 /* ! Образование */
 .center-section:not(:last-child),
 .side-section:first-child {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
 }
 
 .education .container-wrap {
